subo tutoriales a la pagina y realizo su descripción

--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -17,10 +17,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Changa+One&family=Josefin+Sans:ital,wght@1,700&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Changa+One&family=Josefin+Sans:ital,wght@1,700&family=Roboto+Slab:wght@500&display=swap"
+        rel="stylesheet">
 
     <!-- JavaScript para PopUp y cambio de estilos en el encabezado -->
     <script>
@@ -37,7 +41,7 @@
         }
 
         // Cambio de estilos en el encabezado al hacer scroll
-        window.onscroll = function() {
+        window.onscroll = function () {
             var header = document.querySelector('header');
             var headerH1 = document.querySelector('.header__h1');
             if (window.pageYOffset > 50) {
@@ -72,12 +76,17 @@
                 <h2 class="amarilla">En expertos digitales</h2>
                 <ul class="descripcion__div--ul">
                     <li class="descripcion__li">¡Bienvenidos a GrandTech, tu aliado digital.</li>
-                    <li class="descripcion__li ">Como el nieto digital que siempre quisiste, te convertiremos en un experto digital en cuestión de semanas.</li>
-                    <li class="descripcion__li ">Aprende a dominar tu smartphone, navegar por la web, gestionar tu correo electrónico, tomar fotos y mucho más, con la ayuda de nuestros amigables expertos.</li>
-                    <li class="descripcion__li ">Simplifica tu vida y disfruta al máximo de la tecnología. Únete a GrandTech y descubre un mundo de posibilidades digitales. ¡Regístrate hoy y abraza el futuro con confianza!</li>
+                    <li class="descripcion__li ">Como el nieto digital que siempre quisiste, te convertiremos en un
+                        experto digital en cuestión de semanas.</li>
+                    <li class="descripcion__li ">Aprende a dominar tu smartphone, navegar por la web, gestionar tu
+                        correo electrónico, tomar fotos y mucho más, con la ayuda de nuestros amigables expertos.</li>
+                    <li class="descripcion__li ">Simplifica tu vida y disfruta al máximo de la tecnología. Únete a
+                        GrandTech y descubre un mundo de posibilidades digitales. ¡Regístrate hoy y abraza el futuro con
+                        confianza!</li>
                 </ul>
             </div>
-            <img class="descripcion__img" src="./img/pexels-photo-3823489.jpeg" alt="Nieta ayudando a su abuelo frente a una laptop">
+            <img class="descripcion__img" src="./img/pexels-photo-3823489.jpeg"
+                alt="Nieta ayudando a su abuelo frente a una laptop">
         </div>
     </div>
 
@@ -87,7 +96,8 @@
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="/imagenes/clave_seguridad_social.png" width="300" height="200" class="card-img-top" alt="...">
+                        <img src="/imagenes/clave_seguridad_social.png" width="300" height="200" class="card-img-top"
+                            alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Clave de Seguridad Social</h5>
                             <p class="card-text">Crea tu clave de seguridad social</p>
@@ -115,7 +125,99 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/Agregar_contacto.png" class="card-img-top" width="300" height="200"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Agendar nuevos contactos</h5>
+                            <p class="card-text">Agrega tus nuevos contactos</p>
+                            <a href="tutorial4.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/ubicacion.png" class="card-img-top" width="300" height="200" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Comparte tu ubicación</h5>
+                            <p class="card-text">Como compartir tu ubicación</p>
+                            <a href="tutorial5.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/HABLA CON BOTI.png" class="card-img-top" width="300" height="200" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Aprende hablar con boti</h5>
+                            <p class="card-text">Aprende hablar con un asistente virtual</p>
+                            <a href="tutorial6.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/desintalar.png" class="card-img-top" width="300" height="200" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Desinstalar una app en tu celular</h5>
+                            <p class="card-text">Pasos para desinstalar una app</p>
+                            <a href="tutorial7.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/gmail.png" class="card-img-top" width="300" height="200" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Crear cuenta de gmail</h5>
+                            <p class="card-text">Pasos a seguir</p>
+                            <a href="tutorial8.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/Diseño sin título.png" class="card-img-top" width="300" height="200" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Crear una billetera virtual BNA</h5>
+                            <p class="card-text">Billetera virtual</p>
+                            <a href="tutorial9.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/estado_whatsapp.png" class="card-img-top" width="300" height="200" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Actualizar estado de whatsapp</h5>
+                            <p class="card-text">Aprende a actualizar tus estados</p>
+                            <a href="tutorial10.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/chrome.png" class="card-img-top" width="300" height="200" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Como usar pestañas de chrome</h5>
+                            <p class="card-text">Aprende usar chrome</p>
+                            <a href="tutorial11.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4">
+                    <div class="card" style="width: 18rem;">
+                        <img src="/imagenes/llamada.png" class="card-img-top" width="300" height="200" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Llamadas por whatsapp</h5>
+                            <p class="card-text">Aprende a llamar por whatsapp</p>
+                            <a href="tutorial12.html" class="btn btn-success">VER</a>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
         </div>
     </main>
 
@@ -133,18 +235,18 @@
 
             <form action="https://formspree.io/f/moqorwro" method="POST">
                 <label>
-                Nombre:
-                <input type="text" name="nombre" required>
-            </label>
+                    Nombre:
+                    <input type="text" name="nombre" required>
+                </label>
 
                 <label>
-                Mail:
-                <input type="email" name="email" required>
-            </label>
+                    Mail:
+                    <input type="email" name="email" required>
+                </label>
                 <label>
-                Mensaje:
-                <textarea name="message" required></textarea>
-            </label>
+                    Mensaje:
+                    <textarea name="message" required></textarea>
+                </label>
                 <!-- your other form fields go here -->
                 <button class="button-enviar" type="submit">Enviar</button>
             </form>
