--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -72,7 +72,7 @@
         </header>
         <div class="descripcion">
             <div descripcion__div>
-                <h2 class="descripcion__div--h2">Convertimos abuelos</h2>
+                <h2 class="descripcion__div--h2">Convertimos ABUELOS</h2>
                 <h2 class="amarilla">En expertos digitales</h2>
                 <ul class="descripcion__div--ul">
                     <li class="descripcion__li">¡Bienvenidos a GrandTech, tu aliado digital.</li>
