--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
-    <link rel="icon" href="img/FAVICON.png" type="image/x-icon">
+    <link rel="icon" href="img/Fa.png" type="image/x-icon">
     <title>GranTech</title>
     <!--bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -60,7 +60,7 @@
         <header class="encabezado__header">
             <h1 class="header__h1">GrandTech!</h1>
             <div class="logo">
-                <img src="img/Frame 1.png" alt="Descripción del logo">
+                <img src="img/Frame 2.png" alt="Descripción del logo">
             </div>
             <nav>
                 <ul>
