--- a/Tecnología para la Tercera Edad/tutorial1.html
+++ b/Tecnología para la Tercera Edad/tutorial1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/tutorial1.css">
+    <link rel="icon" href="./img/Fa.png" type="image/x-icon">
     
     <!--bootstrap::: Debemos ponerlo en cada plantilla-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -13,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Changa+One&family=Josefin+Sans:ital,wght@1,700&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>GranTech</title>
 </head>
 <body>
   <header>
