se cambiaron las direcciones a los videos

--- a/Tecnología para la Tercera Edad/index.html
+++ b/Tecnología para la Tercera Edad/index.html
@@ -111,7 +111,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Clave de Seguridad Social</h5>
                             <p class="card-text">Crea tu clave de seguridad social</p>
-                            <a href="tutorial1.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial1.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Crédito</h5>
                             <p class="card-text">Solicitar Crédito para jubilados y pensionados</p>
-                            <a href="tutorial2.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial2.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Consulta Expediente</h5>
                             <p class="card-text">Solicitar Expediente</p>
-                            <a href="tutorial3.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial3.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Agendar nuevos contactos</h5>
                             <p class="card-text">Agrega tus nuevos contactos</p>
-                            <a href="tutorial4.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial4.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Comparte tu ubicación</h5>
                             <p class="card-text">Como compartir tu ubicación</p>
-                            <a href="tutorial5.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial5.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Aprende hablar con boti</h5>
                             <p class="card-text">Aprende hablar con un asistente virtual</p>
-                            <a href="tutorial6.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial6.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Desinstalar una app en tu celular</h5>
                             <p class="card-text">Pasos para desinstalar una app</p>
-                            <a href="tutorial7.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial7.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Crear cuenta de gmail</h5>
                             <p class="card-text">Pasos a seguir</p>
-                            <a href="tutorial8.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial8.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Crear una billetera virtual BNA</h5>
                             <p class="card-text">Billetera virtual</p>
-                            <a href="tutorial9.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial9.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -202,7 +202,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Actualizar estado de whatsapp</h5>
                             <p class="card-text">Aprende a actualizar tus estados</p>
-                            <a href="tutorial10.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial10.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Como usar pestañas de chrome</h5>
                             <p class="card-text">Aprende usar chrome</p>
-                            <a href="tutorial11.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial11.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Llamadas por whatsapp</h5>
                             <p class="card-text">Aprende a llamar por whatsapp</p>
-                            <a href="tutorial12.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/tutorial12.html" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
