se corrigieron rutas de los videos

--- a/Tecnología para la Tercera Edad/index.html
+++ b/Tecnología para la Tercera Edad/index.html
@@ -106,123 +106,123 @@
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/clave_seguridad_social.png" width="300" height="200" class="card-img-top"
+                        <img src="./imagenes/clave_seguridad_social.png" width="300" height="200" class="card-img-top"
                             alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Clave de Seguridad Social</h5>
                             <p class="card-text">Crea tu clave de seguridad social</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial1.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/TUTORIAL_ Clave de la Seguridad Social.mp4"  target="_blank" "btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/Credito.png" class="card-img-top" width="300" height="200" alt="...">
+                        <img src="./imagenes/Credito.png" class="card-img-top" width="300" height="200" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Crédito</h5>
                             <p class="card-text">Solicitar Crédito para jubilados y pensionados</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial2.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app - ¿CÓMO SOLICITAR UN CRÉDITO ANSES PARA JUBILACIONES Y PENSIONES.mp4"  target="_blank" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/Credito.png" class="card-img-top" width="300" height="200" alt="...">
+                        <img src="./imagenes/Credito.png" class="card-img-top" width="300" height="200" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Consulta Expediente</h5>
                             <p class="card-text">Solicitar Expediente</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial3.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app-como consultar expediente ANSES Jubulaciones y pensiones-(480p).mp4"  target="_blank" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/Agregar_contacto.png" class="card-img-top" width="300" height="200"
+                        <img src="./imagenes/Agregar_contacto.png" class="card-img-top" width="300" height="200"
                             alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Agendar nuevos contactos</h5>
                             <p class="card-text">Agrega tus nuevos contactos</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial4.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app-CÓMO AGENDAR CONTACTOS EN TU CELULAR-(480p).mp4"  target="_blank" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/ubicacion.png" class="card-img-top" width="300" height="200" alt="...">
+                        <img src="./imagenes/ubicacion.png" class="card-img-top" width="300" height="200" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Comparte tu ubicación</h5>
                             <p class="card-text">Como compartir tu ubicación</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial5.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app-CÓMO COMPARTIR TU UBICACIÓN POR WHATSAPP-(480p).mp4"  target="_blank" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/HABLA CON BOTI.png" class="card-img-top" width="300" height="200" alt="...">
+                        <img src="./imagenes/HABLA CON BOTI.png" class="card-img-top" width="300" height="200" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Aprende hablar con boti</h5>
                             <p class="card-text">Aprende hablar con un asistente virtual</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial6.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app-APRENDÉ A HABLAR CON BOTI-(480p).mp4" target="_blank" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/desintalar.png" class="card-img-top" width="300" height="200" alt="...">
+                        <img src="./imagenes/desintalar.png" class="card-img-top" width="300" height="200" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Desinstalar una app en tu celular</h5>
                             <p class="card-text">Pasos para desinstalar una app</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial7.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app-CÓMO DESINSTALAR APLICACIONES DE TU CELULAR-(480p).mp4"  target="_blank" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/gmail.png" class="card-img-top" width="300" height="200" alt="...">
+                        <img src="./imagenes/gmail.png" class="card-img-top" width="300" height="200" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Crear cuenta de gmail</h5>
                             <p class="card-text">Pasos a seguir</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial8.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app-CÓMO CREAR UNA CUENTA DE GMAIL-(1080p60).mp4"  target="_blank" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/Diseño sin título.png" class="card-img-top" width="300" height="200" alt="...">
+                        <img src="./imagenes/Diseño sin título.png" class="card-img-top" width="300" height="200" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Crear una billetera virtual BNA</h5>
                             <p class="card-text">Billetera virtual</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial9.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app-BNA + - COMO CREAR UNA BILLETERA VIRTUAL del BANCO NACION-(1080p).mp4" target="_blank" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/estado_whatsapp.png" class="card-img-top" width="300" height="200" alt="...">
+                        <img src="./imagenes/estado_whatsapp.png" class="card-img-top" width="300" height="200" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Actualizar estado de whatsapp</h5>
                             <p class="card-text">Aprende a actualizar tus estados</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial10.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app-ACTUALIZAR ESTADOS DE WHATSAPP-(480p).mp4"  target="_blank" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/chrome.png" class="card-img-top" width="300" height="200" alt="...">
+                        <img src="./imagenes/chrome.png" class="card-img-top" width="300" height="200" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Como usar pestañas de chrome</h5>
                             <p class="card-text">Aprende usar chrome</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial11.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app-CÓMO USAR PESTAÑAS DE CHROME-(480p).mp4"  target="_blank"  class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="card" style="width: 18rem;">
-                        <img src="../imagenes/llamada.png" class="card-img-top" width="300" height="200" alt="...">
+                        <img src="./imagenes/llamada.png" class="card-img-top" width="300" height="200" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Llamadas por whatsapp</h5>
                             <p class="card-text">Aprende a llamar por whatsapp</p>
-                            <a href="./Tecnología para la Tercera Edad/tutorial12.html" class="btn btn-success">VER</a>
+                            <a href="../Tecnología para la Tercera Edad/Videos/Y2meta.app-CÓMO REALIZAR LLAMADAS POR WHATSAPP-(1080p60).mp4"  target="_blank" class="btn btn-success">VER</a>
                         </div>
                     </div>
                 </div>
